# HSerde

./: Cargo.toml  README.md
src/: boolean.rs  error.rs  integer.rs  lib.rs  static.rs  string.rs  testbench.rs  tuple.rs  vector.rs
src/dynamic/: hserde_dyn.md  obj.rs
src/static/: README.md  boolean.rs  integer.rs  string.rs  testbench.rs  tuple.rs  vector.rs
