[package]
name = "hserde"
version = "0.1.0"
edition = "2021"
authors = ["Baehyunsol <baehyunsol@naver.com>"]
description = "Simple serialization/deserialization library written purely in Rust."
license = "MIT"
keywords = ["serialization", "deserialization", "serde"]
repository = "https://github.com/baehyunsol/HSerde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
